[package]
name = "tinyrs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
structopt = "0.3.26"
chrono = "*"
[profile.release]
strip = true


   [target.x86_64-unknown-linux-musl]
   rustflags = ["-C", "linker-flavor=ld.lld"]